Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Smart-realestate</h1>
-        <h2>Smart realestate is a full stack project which fetching and predicting house prices</h2>
+        <h2>Smart realestate is a full stack project which fetches and predicts house prices</h2>
         <a href="https://github.com/stevensshi/smart-realestate" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -31,7 +31,7 @@
           <h1>
 <a id="smart-realestate" class="anchor" href="#smart-realestate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Smart Realestate</h1>
 
-<p>Smart Realestate is a house price tracking and prediction system.</p>
+<p>Smart Realestate is a house price tracking and predicting system.</p>
 
 <p>The system is service oriented with high scalability and cutting-edge technologies like Node.js/Express, PRC API, Python, web scraper, MongoDB and the most hot machine learning framework -- TensorFlow. </p>
 
@@ -39,13 +39,15 @@
 
 <ul>
 <li>Front server: a dynamic search website constructed by Node.js, and return estimated price and search result list.</li>
-<li>API server: a RPC API service server written in Python, accepting request from front server and call TensorFlow service</li>
-<li>Data fetcher: a web crawler continously gather property information.</li>
-<li>Machine learning: a online prediction service and offline training model.</li>
+<li>API server: a RPC API service server written in Python, accepting request from front server and call TensorFlow service.</li>
+<li>Machine learning: a online prediction service useing TensorFlow and offline training model.</li>
+<li>Data fetcher: a web crawler continously gather property information into MongoDB.</li>
 </ul>
 
 <p>System Architecture
-<img src="/Architecture.png" alt="Architecture"></p>
+<img src="https://raw.githubusercontent.com/stevensshi/smart-realestate/master/architecture.png" alt="Architecture"></p>
+
+<p>The system is in prototyping and will be online during Chirstmas</p>
         </section>
 
         <aside id="sidebar">
